--- a/manna/templates/EditRecentVideosPage.html
+++ b/manna/templates/EditRecentVideosPage.html
@@ -1,4 +1,4 @@
-{% extends "recents.html" %}
+{% extends "RecentVideosPage.html" %}
 	{% block formset %}
 		<h4 id="form_msg">Select video above to include in recent video set, then click submit.</h4>
         {{ super() }} 
