--- a/manna/templates/login_form.html
+++ b/manna/templates/login_form.html
@@ -4,13 +4,14 @@
       <ul>
          <li><a href="#email_login">Email Login</a></li>
          <li><a href="#google_login">Google Login</a></li>
-         <li><a href="#register">Request Login</a></li>
+         <li><a href="#request">Request Login</a></li>
+         <li><a href="#invite">Invite Login</a></li>
       </ul>
       {% import "bootstrap/wtf.html" as wtf %}
       <div id="email_login">
 		<fieldset>
 			<legend>User Login Form</legend>
-			<h4>Login with a previously registered email and a password (scroll down to register.)</h4>
+			<h4>Login with a previously registered email and a password.</h4>
             <form class="form" method="post" role="form">
                     {{ page.login_form.hidden_tag() }}
                     {{ wtf.form_errors(page.login_form, hiddens="only") }}
@@ -32,7 +33,7 @@
             </form>
 		</fieldset>
       </div>
-      <div id="register">
+      <div id="request">
 		<fieldset>
 			<legend>User Account Request Form</legend>
         <form class="form" method="post" role="form">
@@ -40,9 +41,21 @@
             {{ wtf.form_field(page.request_form.email) }}
              <h4>In the comments, give us an idea who you are and why you are requesting access.</h4>
             {{ wtf.form_field(page.request_form.comments) }}
-            {{ wtf.form_field(page.request_form.recaptcha) }}
             {{ wtf.form_field(page.request_form.submit) }}
+	</form>
 		</fieldset>
+      </div>
+      <div id="invite">
+	<fieldset>
+		<legend>User Account Invitation Form</legend>
+		<form class="form" method="post" role="form">
+		    {{ page.invite_form.hidden_tag() }}
+		    {{ wtf.form_field(page.invite_form.email) }}
+		     <h4>In the comments, tell the user why you are inviting them.</h4>
+		    {{ wtf.form_field(page.invite_form.comments) }}
+		    {{ wtf.form_field(page.invite_form.submit) }}
+		</form>
+	</fieldset>
       </div>
     </div>
 	{% endblock %}
