--- a/manna/templates/base.html
+++ b/manna/templates/base.html
@@ -1,20 +1,106 @@
-<!DOCTYPE html>
-<html lang="en">
-   <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-      {% block headspace %}{% endblock %}
-	</head>
-	<body>
-		{% block bannerspace %}{% endblock %}
-      <section class="status" style="center; background-color: black; color: red;">
-        {% for message in get_flashed_messages() %}
-        <h3>{{message}}</h3>
-        {% endfor %}
-      </section>
-		{% block contentspace %}{% endblock %}
-		{% block footspace %}{% endblock %}
-   </body>
-</html>
+{% extends "bootstrap/base.html" %}
+	{% block styles %} 
+		{{ super() }}
+		<link rel="stylesheet" type="text/css" 
+				href="https://cdn.datatables.net/r/ju-1.11.4/jqc-1.11.3,dt-1.10.8/datatables.min.css">
+		<link rel="stylesheet" type="text/css" 
+				href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css"> 
+		<style>
+			body { margin: 15px; background-color: grey; }
+			a:visited { color: gold; }
+			a { color: yellow; }
+			button a { color: black; }
+			button a:visited { color: blue; }
+			fieldset {
+			  margin: 10px; 
+			  padding: 15px;
+			  border: 2px solid black;
+			  display: grid;
+			  grid-auto-columns: auto;
+			}
+			.site-title { margin: 0 auto;
+							  padding: 10px;
+							  font-weight:bold; 
+							  text-align:center; 
+							  width:auto;
+							  background-image: linear-gradient(to right, gray,black,gray);
+							  color:orange; 
+			}
+			.table-title { margin: 0 auto;
+							   padding: 10px;
+							   font-weight:bold; 
+							   width:auto;
+							   background-image: linear-gradient(to right, black,gray);
+							   color:yellow; 
+			}
+			.menu {
+				display: grid;
+				width:auto;
+				grid-template-columns: auto auto auto;
+				font-weight:bold; 
+				border-radius: 20px;
+				background-image: linear-gradient(to right, gray,black,gray); 
+         }
+			.form-control { width: 100%; }
+			.mcenter { text-align: center; }
+			table { 
+				 background-color: blue; 
+			}
+			table.dataTable tbody tr { 
+				 background-color: gray; 
+				 color: black;
+				 text-align: left;
+				 font-size: 15px;
+			}
+			table.dataTable tbody tr a { color: yellow; }
+            {% block extrastyle %} 
+            {% endblock %}
+		</style>
+	{% endblock %}
+	{% block title %}{{title}}{% endblock %}
+   {% block content %}
+		<h3 class="menu" >
+			<a class="mcenter" href="{{ url_for('show_recent') }}" onclick="shift_edit(event, this)">Recent</a>
+			<a class="site-title" href="/">{{ title }}</a>
+			<a class="mcenter" href="{{ url_for('view_archives') }}" onclick="shift_edit(event, this)">Archives</a>
+			{% if current_user.is_authenticated %}
+				<a class="mcenter" href="{{ url_for('logout') }}" onclick="shift_edit(event, this)">Logout</a>
+			{% else %}
+				<!--a href="{{ url_for('login') }}" onclick="shift_edit(event, this)">Login/Register </a-->
+			{% endif %}
+		</h3>
+		<h3 id="status" style="background: black; color: red;">
+			{% with messages = get_flashed_messages() %}
+				{% if messages %}
+					{% for message in messages %}
+						{{ message }}
+					{% endfor %}
+				{% endif %}
+			{% endwith %}
+		</h3>
+		{% block main %}
+		{% endblock %}
+		{% block formset %}
+		{% endblock %}
+	{% endblock %}
+	{% block scripts %}
+		<script src="https://cdn.datatables.net/r/ju-1.11.4/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
+		<script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script>
+      {% block extra_scripts %}
+      {% endblock %}
+		<script>
+			$(document).ready(function() { 
+				{% block scriptage %}
+				{% endblock %} })
+			function shift_edit(event, slink) { 
+				if (event.shiftKey) 
+					event.preventDefault();
+                 if (typeof(slink) == "string") 
+                     window.location = slink
+                 else
+                     aurl = new URL(slink.href) 
+                     window.location = aurl.origin + aurl.pathname + '/edit' + aurl.search
+            return false; 
+			} 
+		</script>
+	{% endblock %}
